# Kinematic

./: .gitignore  CMakeLists.txt  LICENSE  config.json  run.sh
include/: EBO.hpp  VAO.hpp  VBO.hpp  camera.hpp  config.hpp  elements.hpp  shader.hpp  ui.hpp
resoureces/models/: car.stl  cone.stl
resoureces/shaders/: default.frag  default.vert  light.vert
src/: EBO.cpp  VAO.cpp  VBO.cpp  camera.cpp  config.cpp  elements.cpp  glad.cpp  main.cpp  shader.cpp  ui.cpp
